--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "lucide-react": "^0.469.0",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "recharts": "^3.2.1"
   }
 }
