--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,7 +1,6 @@
 {
   "dependencies": {
     "lucide-react": "^0.469.0",
-    "react-icons": "^5.4.0",
-    "recharts": "^3.2.1"
+    "react-icons": "^5.4.0"
   }
 }
